<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page_menu_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home_text"/>
    <item
        android:id="@+id/map_page_menu_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_place_24"
        android:title="@string/menu_map_text"/>

    <item
        android:id="@+id/search_page_menu_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_search_text"/>

    <item
        android:id="@+id/account_page_menu_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/menu_account_text"/>

    <item
        android:id="@+id/connections_page_menu_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_handshake_24"
        android:title="@string/menu_connection_text"/>
</menu>

