<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/name">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Sarthak"
                android:textSize="12dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="25dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="150dp"
                android:id="@+id/email"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="sarthak12@gmail.com"
                android:textSize="12dp"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/first_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sex_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sex">

            <AutoCompleteTextView
                android:id="@+id/sex"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/male"
                android:textSize="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/university_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="25dp"
            android:hint="@string/university">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/university"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_row">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hometown_field"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/hometown">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hometown"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:width="180dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/current_address_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="25dp"
            android:hint="@string/currentAddress">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/currentAddress"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Hollis Street, Halifax"
                android:textSize="12dp" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/third_row">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/previous_work_location_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/previousWorkLocation">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/previousWorkLocation"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="12dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/previous_work_organisation_field"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="25dp"
            android:hint="@string/previousWork">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/previousWorkOrganisation"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="12dp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fourth_row">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/room_preference_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/roomPreference">

            <AutoCompleteTextView
                android:id="@+id/room_preference"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/single"
                android:textSize="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sixth_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fifth_row">

        <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:id="@+id/interested_in_field"
        android:layout_height="wrap_content"
        android:hint="@string/interested">

        <AutoCompleteTextView
            android:id="@+id/interested_in"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/roommates"
            android:textSize="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/seventh_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sixth_row">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:id="@+id/food_preference_field"
            android:layout_height="wrap_content"
            android:hint="@string/foodPreference">

            <AutoCompleteTextView
                android:layout_height="wrap_content"
                android:layout_width="325dp"
                android:id="@+id/food_preference"
                android:inputType="none"
                android:text="@string/veg"
                android:textSize="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/eighth_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seventh_row">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skipButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Skip"
            app:iconPadding="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ninth_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eighth_row">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="Save" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
