<?xml version="1.0" encoding="utf-8"?>

<!--references-->
<!--    https://github.com/material-components/material-components-android/blob/master/docs/components/Tabs.md-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mateconnect.HomeFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/home_page_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_public_24"
            android:text="@string/home_tab_all" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_tips_and_updates_24"
            android:text="@string/home_tab_suggested"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="199dp" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_local_fire_department_24"
            android:text="@string/home_tab_popular"
            tools:layout_editor_absoluteX="257dp"
            tools:layout_editor_absoluteY="238dp" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/home_page_tabs_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_page_tab_layout" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto"
        android:text="Welcome to Mate Connect."
        app:layout_constraintBottom_toTopOf="@+id/home_page_tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/greeting_message"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="Find your best mate today!"
        android:layout_marginLeft="10dp"
        android:gravity="bottom"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
